--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
     <script src="https://use.fontawesome.com/15c1da1ac2.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
