Removed reference to fontawesome

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
-    <script src="https://use.fontawesome.com/15c1da1ac2.js"></script>
     <title>Tic Tac Toad</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+hsl(198, 36%, 39%)
